
171004 Martin Mann :
 * configure.ac :
   + INTARNA_LOG_COLORING setup for console log coloring
 * bin/IntaRNA.cpp :
   * colored log output depends on INTARNA_LOG_COLORING

171004 Martin Mann :
 * configure.ac :
   * bump minimal ViennaRNA version to 2.4.1 (for constraint interface) 

version 2.0.5

170926 Martin Mann :
 * IntaRNA/PredictorMfe4d :
   * getNextBest() : BUGFIX : matrix access was not using interaction end 
     distance and interaction data was wrongly storing distance as right index;
     this was causing segfaults when requesting more than one prediction output
     (thanks to Rick Gelhausen)
 
170926 Martin Mann :
 * IntaRNA/PredictorMfe4dSeed :
 * IntaRNA/PredictorMfe2dHeuristicSeed :
   + updateOptima() to disable predTracker updates when fillHybridE() of super
     class is called; 
     --> BUGFIX : so far resulting tracker profiles were a mix of non-seeded and
         seeded interactions and thus not complementary with the predicted
         interactions

version 2.0.4

170706 Martin Mann :
 * IntaRNA/OutputHandlerCsv :
   + E_hybrid : hybrid-only energy = E - ED1 - ED2
   + E_norm : length-normalized energy = E / ln( length1*length2 )
   + E_hybridNorm : length-normalized hybrid-only energy =  E_hybrid / ln(l1*l2)

170705 Martin Mann :
 * perl/Intarna*.pl :
   * shebang corrected (thanks to Patrick Wright)

170503 Martin Mann :
 * README.md :
   * output file description updated
   + description of easylogging++ initialization for library usage 
     (thanks to Maria Waldl) 
 * bin/CommandLineParsing :
   * getFullFilename() : 
     * bugfix : handling of paths in file name definitions
       (thanks to Milad Miladi)
     * sequence index now suffix of filename (added in front of file extension) 

version 2.0.3

170503 Martin Mann :
 * README.md :
   + OS X install instructions (thanks to Lars Barquist)
 + IntaRNA/NussinovHandler : (thanks to Mostafa Mahmoud) implementation of